Add footer with name and link to GitHub

--- a/style.css
+++ b/style.css
@@ -121,3 +121,33 @@ button:hover {
   border-width: 2px;
 }
 
+#gitLogo {
+  height: 2rem;
+  width: 2rem;
+}
+
+#gitLogo:hover {
+  animation: logoRotation .75s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes logoRotation {
+  from {
+      transform: scale(1) rotate(0);
+  }
+
+  to {
+      transform: scale(1.2) rotate(720deg);
+  }
+}
+
+footer {
+  position: fixed;
+  bottom: 0px;
+  padding-bottom: 1rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
